--- a/Documentation/PracaMagisterka.tex
+++ b/Documentation/PracaMagisterka.tex
@@ -4,6 +4,7 @@
 % Definicja dokumentu
 \usepackage[unicode=true]{hyperref}
 \usepackage{pdfpages}
+\usepackage{tabularx}
 \newcommand\PDFtitle{Wirtualny escape room z fizyki na poziomie szkoły średniej}
 \newcommand\PDFauthors{}
 \hypersetup{
@@ -26,7 +27,7 @@
 \include{chapters/2_wprowadzenie_do_dziedziny}
 \include{chapters/3_technologie_algorytmy_narzedzia}
 \include{chapters/4_projekt_systemu}
-\include{chapters/5_badania}
+\include{chapters/5_implementacja_walidacja_testowanie}
 \include{chapters/6_podsumowanie}
 \include{chapters/7_wykazy}
 \end{document}
