Updated chapters 3 and 4, added appropriate citations

--- a/Documentation/bibliography/bibliography.bib
+++ b/Documentation/bibliography/bibliography.bib
@@ -1,11 +1,21 @@
-@article{dx12_2,
-   author   =  {{Piotr Piwowarczyk}},
-   title    =  "Microsoft DirectX 12 Feature Level 12\_2 - nowa wersja funkcji API \url{https://www.purepc.pl/microsoft-directx-12-feature-level-12-2-nowa-wersja-funkcji-api}",
-   urldate  =  "2020-11-02",
+
+@online{cave_wiki,
+  author  = {Wikipedia},
+  title   = {Cave automatic virtual environment},
+  url     = {https://en.wikipedia.org/wiki/Cave_automatic_virtual_environment},
+  urldate = {2025-03-28}
 }
 
-@article{dx12_2,
-    author = {{Wikipedia}},
-    title = "Cave automatic virtual environment \url{https://en.wikipedia.org/wiki/Cave_automatic_virtual_environment}",
-    urldate = "28.03.2025" ,
+@online{FEMBTS_git,
+  author  = {Xueling Luo},
+  title   = {Finite Element Method for Beam and Truss Structures},
+  url     = {https://github.com/LuoXueling/FiniteElementMethodForBeamAndTrussStructures},
+  urldate = {2025-05-22}
+}
+
+@online{flystick_img,
+  author  = {MiddleVR},
+  title   = {Configuring devices},
+  url     = {https://www.middlevr.com/2/doc/current/CfgDevices.html},
+  urldate = {2025-05-22}
 }
